# myopencv

./: CMakeLists.txt  main.cpp
